@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.16 2005/04/08 14:35:31 jwise Exp $
+$NetBSD: distinfo,v 1.17 2006/04/23 14:22:19 hiramatsu Exp $
 
-SHA1 (DBD-Pg-1.48.tar.gz) = 8fc1633dd20c04bf5040a0ce768b3ffe1b00d484
-RMD160 (DBD-Pg-1.48.tar.gz) = 972420e0d8f744f5c72522ce6ea6521c81d41b21
-Size (DBD-Pg-1.48.tar.gz) = 144737 bytes
+SHA1 (DBD-Pg-1.49.tar.gz) = 37c1c37a02afa00d48f8dd739d5d8502a7c40045
+RMD160 (DBD-Pg-1.49.tar.gz) = 171c1df5f56a11cb9aa3d3eab85e220671f73010
+Size (DBD-Pg-1.49.tar.gz) = 147310 bytes
