@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2007,v 1.1301 2007/06/09 23:39:32 abs Exp $
+$NetBSD: CHANGES-2007,v 1.1302 2007/06/09 23:43:59 abs Exp $
 
 Changes to the packages collection and infrastructure in 2007:
 
@@ -2501,6 +2501,7 @@ Changes to the packages collection and infrastructure in 2007:
 	Updated devel/p5-AppConfig to 1.65 [abs 2007-06-10]
 	Updated devel/p5-File-HomeDir to 0.65 [abs 2007-06-10]
 	Updated archivers/p5-Archive-Tar to 1.32 [abs 2007-06-10]
+	Updated databases/p5-DBD-postgresql to 0.49 [abs 2007-06-10]
 	Updated databases/p5-DBI to 1.56 [abs 2007-06-10]
 	Updated devel/p5-Algorithm-Diff to 1.1902 [abs 2007-06-10]
 	Updated devel/p5-Carp-Clan to 5.9 [abs 2007-06-10]
